force-app/main/default/objects/Order/fields/Shipping_Charges__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Charges__c</fullName>
    <description>This field will hold the shipping charges for NewCo Orders. Charges will be maintained in the custom meta datatype - Shipping_Charges__mdt</description>
    <label>Shipping Charges</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>