force-app/main/default/objects/Order/fields/Shipping_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Contact_Phone__c</fullName>
    <description>Formula Logic for correct Shipping contact Phone.</description>
    <formula>IF(AND(Schedule__c = 1,NOT(ISPICKVAL(Opportunity.Type,&apos;Reorder&apos;))),Account.Trainer_del__r.Phone, 
IF(AND(Schedule__c = 1,ISPICKVAL(Opportunity.Type,&apos;Reorder&apos;),ISPICKVAL(Account.Primary_Phone_Contact__c ,&apos;Work&apos;)),Account.Phone, 
IF(AND(Schedule__c = 1,ISPICKVAL(Opportunity.Type,&apos;Reorder&apos;),ISPICKVAL(Account.Primary_Phone_Contact__c ,&apos;Mobile&apos;)),Account.PersonContact.MobilePhone, 
IF(AND(Schedule__c = 1,ISPICKVAL(Opportunity.Type,&apos;Reorder&apos;),ISPICKVAL(Account.Primary_Phone_Contact__c ,&apos;Home&apos;)),Account.PersonContact.HomePhone, 
IF(AND(Schedule__c = 1,ISPICKVAL(Opportunity.Type,&apos;Reorder&apos;),ISPICKVAL(Account.Primary_Phone_Contact__c ,&apos;Other&apos;)),Account.PersonContact.OtherPhone , 
IF(AND(Schedule__c &lt;&gt; 1,ISPICKVAL(Account.Primary_Phone_Contact__c ,&apos;Other&apos;)),Account.PersonContact.OtherPhone , 
IF(AND(Schedule__c &lt;&gt; 1,ISPICKVAL(Account.Primary_Phone_Contact__c ,&apos;Work&apos;)),Account.Phone, 
IF(AND(Schedule__c &lt;&gt; 1,ISPICKVAL(Account.Primary_Phone_Contact__c ,&apos;Mobile&apos;)),Account.PersonContact.MobilePhone, 
IF(AND(Schedule__c &lt;&gt; 1,ISPICKVAL(Account.Primary_Phone_Contact__c ,&apos;Home&apos;)),Account.PersonContact.HomePhone, 
IF(NOT(Account.IsPersonAccount), Account.Phone,
&apos;&apos; 
))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Contact Phone</label>
    <type>Text</type>
</CustomField>