force-app/main/default/objects/Order/fields/Shipping_Hold_Status__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Hold_Status__c</fullName>
    <label>Shipping Hold Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>