force-app/main/default/objects/Order/fields/Shipping_Method_Name__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Method_Name__c</fullName>
    <formula>CASE(TEXT( Shipping_Method__c),
&quot;000001_CADS_D_3DS&quot;, &quot;FedEx Economy® (3-5 business days)&quot;,
&quot;000001_CADS_P_PO&quot;, &quot;FedEx Priority Overnight® (1-2 business days)&quot;,
&quot;000001_CADS_D_CX&quot;, &quot;Canada Post XpresspostTM (3-5 business days)&quot;,
&quot;000001_CADS_P_CP&quot;, &quot;Canada Post PriorityTM (1-2 business days)&quot;,
&quot;000001_CADS_D_P4&quot;, &quot;Purolator Ground (3-5 business days)&quot;,
&quot;000001_CADS_P_P3&quot;, &quot;Purolator Express (1-2 business days)&quot;,
TEXT(Shipping_Method__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Method Name</label>
    <type>Text</type>
</CustomField>