force-app/main/default/objects/Order/fields/Shipping_Provider__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Provider__c</fullName>
    <label>Shipping Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>dhl</fullName>
                <label>DHL</label>
            </value>
            <value>
                <fullName>fedex</fullName>
                <label>FedEx</label>
            </value>
            <value>
                <fullName>purolator</fullName>
                <label>Purolator</label>
            </value>
            <value>
                <fullName>canadaPost</fullName>
                <label>Canada Post</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>