force-app/main/default/objects/Order/fields/Signature_Required__c.field-meta.xml
<CustomField>
    <fullName>Signature_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Signature should be taken during Order Delivery</description>
    <label>Signature Required</label>
    <type>Checkbox</type>
</CustomField>