force-app/main/default/objects/Order/fields/SOS_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>SOS_Unique_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>SOS Unique ID</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>