force-app/main/default/objects/Order/fields/Study_Id__c.field-meta.xml
<CustomField>
    <fullName>Study_Id__c</fullName>
    <description>Study Id is used for Clinical Orders.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Study Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>