force-app/main/default/objects/Order/fields/Supply_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Supply_Period_End_Date__c</fullName>
    <description>Jagan 01/08/2018 - Field tracks when the supply period ends.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Supply Period End Date</label>
    <type>Date</type>
</CustomField>