force-app/main/default/objects/Order/fields/Supply_Period_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Supply_Period_Start_Date__c</fullName>
    <description>Jagan 01/08/2018 - Field tracks when the supply period starts</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Supply Period Start Date</label>
    <type>Date</type>
</CustomField>