force-app/main/default/objects/Order/fields/System_Of_Origin__c.field-meta.xml
<CustomField>
    <fullName>System_Of_Origin__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>System Of Origin</label>
    <length>40</length>
    <type>Text</type>
</CustomField>