force-app/main/default/objects/Order/fields/System_Of_Origin_ID__c.field-meta.xml
<CustomField>
    <fullName>System_Of_Origin_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>System Of Origin ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>