force-app/main/default/objects/Order/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <formula>IF (AND(BEGINS(RecordType.DeveloperName, &apos;DE&apos;), 
( DATEVALUE(ActivatedDate) &lt;= DATE(2020,06,15))), 
Invoice_Net_Price__c *0.19,  
IF (BEGINS(RecordType.DeveloperName, &apos;DE&apos;), Invoice_Net_Price__c *0.16, 0 ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>