force-app/main/default/objects/Order/fields/Tax_Exempt__c.field-meta.xml
<CustomField>
    <fullName>Tax_Exempt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tax Exempt Status at the time of Order Creation (as it can change over period).</description>
    <label>VAT Exempt</label>
    <type>Checkbox</type>
</CustomField>