force-app/main/default/objects/Order/fields/Tax_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Tax_Registration_Number__c</fullName>
    <description>Tax Registration Number at the time of Order Creation (as it can change over a period).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>VAT Registration Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>