force-app/main/default/objects/Order/fields/Tech_Support_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Tech_Support_Order_Type__c</fullName>
    <label>Tech Support Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TECH REPLACE</fullName>
            </value>
            <value>
                <fullName>TECH RET &amp; REP</fullName>
                <label>TECH RETURN &amp; REPLACE</label>
            </value>
            <value>
                <fullName>TECH RETURN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>