force-app/main/default/objects/Order/fields/Territory_Aligned_To_Customer__c.field-meta.xml
<CustomField>
    <fullName>Territory_Aligned_To_Customer__c</fullName>
    <description>Tracks the territory information at the time of Order creation.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Territory Aligned To Customer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>