force-app/main/default/objects/Order/fields/Total_Amount_Contractee__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Contractee__c</fullName>
    <formula>Total_Gross_Price__c  -  Co_Pay__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Contractee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>