force-app/main/default/objects/Order/fields/Total_Gross_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Gross_Price__c</fullName>
    <formula>TotalAmount /*+  IF(VAT_TAX__c != 0.00, 0, Tax__c) */ + VAT_TAX__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Gross Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>