force-app/main/default/objects/Order/fields/Total_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Quantity__c</fullName>
    <description>Total of the Line Items Quantity</description>
    <label>Total Quantity</label>
    <summarizedField>OrderItem.Quantity</summarizedField>
    <summaryFilterItems>
        <field>OrderItem.Product_Name__c</field>
        <operation>notEqual</operation>
        <value>DEX-SHIP-01</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>