force-app/main/default/objects/Order/fields/TotalAmtNumber_hundreds__c.field-meta.xml
<CustomField>
    <fullName>TotalAmtNumber_hundreds__c</fullName>
    <formula>RIGHT(LEFT(TEXT(Total_Gross_Price__c) , FIND(&quot;.&quot;, TEXT(Total_Gross_Price__c ))-3),1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TotalAmtNumber(Hundreds)</label>
    <type>Text</type>
</CustomField>