force-app/main/default/objects/Order/fields/TotalAmtNumber_hundreths__c.field-meta.xml
<CustomField>
    <fullName>TotalAmtNumber_hundreths__c</fullName>
    <formula>RIGHT(LEFT(TEXT(Total_Gross_Price__c) , FIND(&quot;.&quot;, TEXT(Total_Gross_Price__c ))+2),1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TotalAmtNumber(hundreths)</label>
    <type>Text</type>
</CustomField>