force-app/main/default/objects/Order/fields/TotalAmtNumber_Ones__c.field-meta.xml
<CustomField>
    <fullName>TotalAmtNumber_Ones__c</fullName>
    <formula>RIGHT(LEFT(TEXT(Total_Gross_Price__c) , FIND(&quot;.&quot;, TEXT(Total_Gross_Price__c ))-1),1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TotalAmtNumber(Ones)</label>
    <type>Text</type>
</CustomField>