force-app/main/default/objects/Order/fields/TotalAmtNumber_Tens__c.field-meta.xml
<CustomField>
    <fullName>TotalAmtNumber_Tens__c</fullName>
    <formula>RIGHT(LEFT(TEXT(Total_Gross_Price__c) , FIND(&quot;.&quot;, TEXT(Total_Gross_Price__c ))-2),1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TotalAmtNumber(Tens)</label>
    <type>Text</type>
</CustomField>