force-app/main/default/objects/Order/fields/TotalAmtNumber_tenths__c.field-meta.xml
<CustomField>
    <fullName>TotalAmtNumber_tenths__c</fullName>
    <description>Tenths Decimal Place for Total Gross Price</description>
    <formula>RIGHT(LEFT(TEXT(Total_Gross_Price__c) , FIND(&quot;.&quot;, TEXT(Total_Gross_Price__c ))+1),1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Tenths Decimal Place for Total Gross Price</inlineHelpText>
    <label>TotalAmtNumber(tenths)</label>
    <type>Text</type>
</CustomField>