force-app/main/default/objects/Order/fields/TotalAmtNumber_Thousands__c.field-meta.xml
<CustomField>
    <fullName>TotalAmtNumber_Thousands__c</fullName>
    <formula>LEFT(TEXT(Total_Gross_Price__c) , FIND(&quot;.&quot;, TEXT(Total_Gross_Price__c ))-4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TotalAmtNumber(Thousands)</label>
    <type>Text</type>
</CustomField>