force-app/main/default/objects/Order/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <description>Tracking number populated from the Order product.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Tracking Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>