force-app/main/default/objects/Order/fields/Trigger_Time_5__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Time_5__c</fullName>
    <formula>(Now()  -  0.038)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trigger Time 5</label>
    <type>DateTime</type>
</CustomField>