force-app/main/default/objects/Order/fields/Unique_Orders__c.field-meta.xml
<CustomField>
    <fullName>Unique_Orders__c</fullName>
    <description>This field will be used in reports to find out unique orders.</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique Orders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>