force-app/main/default/objects/Order/fields/VAT_TAX__c.field-meta.xml
<CustomField>
    <fullName>VAT_TAX__c</fullName>
    <label>VAT/TAX</label>
    <summarizedField>OrderItem.Item_VAT_TAX__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>