force-app/main/default/objects/Order/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <label>Warehouse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DESD</fullName>
                <label>DESD-Health Link Netherlands</label>
            </value>
            <value>
                <fullName>DEX</fullName>
                <label>DEX-GODepots - Germany</label>
            </value>
            <value>
                <fullName>SDX</fullName>
            </value>
            <value>
                <fullName>HLNL</fullName>
            </value>
            <value>
                <fullName>HLCH</fullName>
            </value>
            <value>
                <fullName>HLUK</fullName>
            </value>
            <value>
                <fullName>SDDEXINTL</fullName>
            </value>
            <value>
                <fullName>CAX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>