force-app/main/default/objects/Order/fields/Web_Order_Confirmation_Status__c.field-meta.xml
<CustomField>
    <fullName>Web_Order_Confirmation_Status__c</fullName>
    <label>Web Order Confirmation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initiated</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>