force-app/main/default/objects/Order/recordTypes/AT_Sales_Order.recordType-meta.xml
<RecordType>
    <fullName>AT_Sales_Order</fullName>
    <active>true</active>
    <description>Sales Order for Austria</description>
    <label>AT Sales Order</label>
</RecordType>