force-app/main/default/objects/Order/recordTypes/AT_Sales_Order_Read_Only.recordType-meta.xml
<RecordType>
    <fullName>AT_Sales_Order_Read_Only</fullName>
    <active>true</active>
    <label>AT Sales Order Read Only</label>
</RecordType>