force-app/main/default/objects/Order/recordTypes/AT_Tech_Support_Order.recordType-meta.xml
<RecordType>
    <fullName>AT_Tech_Support_Order</fullName>
    <active>true</active>
    <description>Tech Support Order for Austria</description>
    <label>AT Tech Support Order</label>
</RecordType>