force-app/main/default/objects/Order/recordTypes/BE_Sales_Order.recordType-meta.xml
<RecordType>
    <fullName>BE_Sales_Order</fullName>
    <active>true</active>
    <description>Sales Order for Belgium</description>
    <label>BE Sales Order</label>
</RecordType>