force-app/main/default/objects/Order/recordTypes/BE_Sales_Order_Read_Only.recordType-meta.xml
<RecordType>
    <fullName>BE_Sales_Order_Read_Only</fullName>
    <active>true</active>
    <label>BE Sales Order Read Only</label>
</RecordType>