force-app/main/default/objects/Order/recordTypes/BE_Tech_Support_Order.recordType-meta.xml
<RecordType>
    <fullName>BE_Tech_Support_Order</fullName>
    <active>true</active>
    <description>Tech Support Order for Belgium</description>
    <label>BE Tech Support Order</label>
</RecordType>