force-app/main/default/objects/Order/recordTypes/CA_Sales_Order.recordType-meta.xml
<RecordType>
    <fullName>CA_Sales_Order</fullName>
    <active>true</active>
    <description>Sales Order for Canada</description>
    <label>CA Sales Order</label>
</RecordType>