force-app/main/default/objects/Order/recordTypes/CA_Sales_Order_Read_Only.recordType-meta.xml
<RecordType>
    <fullName>CA_Sales_Order_Read_Only</fullName>
    <active>true</active>
    <description>CA Sales Order that is meant for Read Only with very limited data fields for update</description>
    <label>CA Sales Order Read Only</label>
</RecordType>