force-app/main/default/objects/Order/recordTypes/CA_Tech_Support_Order.recordType-meta.xml
<RecordType>
    <fullName>CA_Tech_Support_Order</fullName>
    <active>true</active>
    <description>Record Type for Canadian Tech Support Orders</description>
    <label>CA Tech Support Order</label>
</RecordType>