force-app/main/default/objects/Order/recordTypes/CH_Sales_Order.recordType-meta.xml
<RecordType>
    <fullName>CH_Sales_Order</fullName>
    <active>true</active>
    <description>Sales Order for Switzerland</description>
    <label>CH Sales Order</label>
</RecordType>