force-app/main/default/objects/Order/recordTypes/CH_Sales_Order_Read_Only.recordType-meta.xml
<RecordType>
    <fullName>CH_Sales_Order_Read_Only</fullName>
    <active>true</active>
    <label>CH Sales Order Read Only</label>
</RecordType>