force-app/main/default/objects/Order/recordTypes/CH_Tech_Support_Order.recordType-meta.xml
<RecordType>
    <fullName>CH_Tech_Support_Order</fullName>
    <active>true</active>
    <description>Tech Support Order for Switzerland</description>
    <label>CH Tech Support Order</label>
</RecordType>