force-app/main/default/objects/Order/recordTypes/DE_Sales_Order.recordType-meta.xml
<RecordType>
    <fullName>DE_Sales_Order</fullName>
    <active>true</active>
    <description>Sales Order record created for Germany</description>
    <label>DE Sales Order</label>
</RecordType>