force-app/main/default/objects/Order/recordTypes/DE_Sales_Order_Read_Only.recordType-meta.xml
<RecordType>
    <fullName>DE_Sales_Order_Read_Only</fullName>
    <active>true</active>
    <description>This record type is used for Non Cash Standard Sales order while they are in Shipping Hold Status</description>
    <label>DE Sales Order Read Only</label>
</RecordType>