force-app/main/default/objects/Order/recordTypes/DE_Tech_Support_Order.recordType-meta.xml
<RecordType>
    <fullName>DE_Tech_Support_Order</fullName>
    <active>true</active>
    <description>Tech Support Order for Germany</description>
    <label>DE Tech Support Order</label>
</RecordType>