force-app/main/default/objects/Order/recordTypes/DIST_Sales_Order.recordType-meta.xml
<RecordType>
    <fullName>DIST_Sales_Order</fullName>
    <active>true</active>
    <description>Standard Sales Order type for Distributors</description>
    <label>DIST Sales Order</label>
</RecordType>