force-app/main/default/objects/Order/recordTypes/DIST_Tech_Support_Order.recordType-meta.xml
<RecordType>
    <fullName>DIST_Tech_Support_Order</fullName>
    <active>true</active>
    <description>Tech Support Order for International Distributors.</description>
    <label>DIST Tech Support Order</label>
</RecordType>