force-app/main/default/objects/Order/recordTypes/GB_Sales_Order.recordType-meta.xml
<RecordType>
    <fullName>GB_Sales_Order</fullName>
    <active>true</active>
    <description>Sales Order Recordtype created for GB</description>
    <label>GB Sales Order</label>
</RecordType>