force-app/main/default/objects/Order/recordTypes/GB_Sales_Order_Read_Only.recordType-meta.xml
<RecordType>
    <fullName>GB_Sales_Order_Read_Only</fullName>
    <active>true</active>
    <description>GB Order Recordtype used for QC</description>
    <label>GB Sales Order Read Only</label>
</RecordType>