force-app/main/default/objects/Order/recordTypes/GB_Tech_Support_Order.recordType-meta.xml
<RecordType>
    <fullName>GB_Tech_Support_Order</fullName>
    <active>true</active>
    <description>GB Tech Support Order Recordtype</description>
    <label>GB Tech Support Order</label>
</RecordType>