force-app/main/default/objects/Order/recordTypes/IE_Sales_Order.recordType-meta.xml
<RecordType>
    <fullName>IE_Sales_Order</fullName>
    <active>true</active>
    <description>Sales Order Recordtype creted for IE</description>
    <label>IE Sales Order</label>
</RecordType>