force-app/main/default/objects/Order/recordTypes/IE_Sales_Order_Read_Only.recordType-meta.xml
<RecordType>
    <fullName>IE_Sales_Order_Read_Only</fullName>
    <active>true</active>
    <description>IE Order Recordtype used for QC</description>
    <label>IE Sales Order Read Only</label>
</RecordType>