force-app/main/default/objects/Order/recordTypes/IE_Tech_Support_Order.recordType-meta.xml
<RecordType>
    <fullName>IE_Tech_Support_Order</fullName>
    <active>true</active>
    <description>Tech Support order for Ireland</description>
    <label>IE Tech Support Order</label>
</RecordType>