force-app/main/default/objects/Order/recordTypes/International_Clinic_Sales_Order.recordType-meta.xml
<RecordType>
    <fullName>International_Clinic_Sales_Order</fullName>
    <active>true</active>
    <description>International Clinic</description>
    <label>International Clinic Sales Order</label>
</RecordType>