force-app/main/default/objects/Order/recordTypes/International_Clinic_Tech_Support_Order.recordType-meta.xml
<RecordType>
    <fullName>International_Clinic_Tech_Support_Order</fullName>
    <active>true</active>
    <description>International Clinic Tech Support</description>
    <label>International Clinic Tech Support Order</label>
</RecordType>