force-app/main/default/objects/Order/recordTypes/SI_Sales_Order.recordType-meta.xml
<RecordType>
    <fullName>SI_Sales_Order</fullName>
    <active>true</active>
    <description>Sales Order for Slovenia</description>
    <label>SI Sales Order</label>
</RecordType>