force-app/main/default/objects/Order/recordTypes/SI_Sales_Order_Read_Only.recordType-meta.xml
<RecordType>
    <fullName>SI_Sales_Order_Read_Only</fullName>
    <active>true</active>
    <label>SI Sales Order Read Only</label>
</RecordType>