force-app/main/default/objects/Order/recordTypes/SI_Tech_Support_Order.recordType-meta.xml
<RecordType>
    <fullName>SI_Tech_Support_Order</fullName>
    <active>true</active>
    <label>SI Tech Support Order</label>
</RecordType>