force-app/main/default/objects/Order/validationRules/All_Audit_Must_Be_Complete_To_Activate.validationRule-meta.xml
<ValidationRule>
    <fullName>All_Audit_Must_Be_Complete_To_Activate</fullName>
    <active>true</active>
    <description>For Non Sample, Tech, Return orders the audit need to be performed</description>
    <errorConditionFormula>AND(
NOT($Profile.Name = &quot;System Administrator&quot;),
NOT($User.Alias = &quot;autoproc&quot;),
ISCHANGED(Status),
ISPICKVAL(Status,&apos;Activated&apos;),
NOT(BEGINS(RecordType.DeveloperName, &apos;DE_&apos;)), 
NOT(BEGINS(RecordType.DeveloperName, &apos;CA_&apos;)),
CONTAINS(TEXT(Type), &apos;STANDARD&apos;),
NOT(ISPICKVAL(Shipping_Hold_Status__c,&apos;&apos;)) ,
NOT(ISPICKVAL(Shipping_Hold_Status__c,&apos;Completed&apos;))
)</errorConditionFormula>
    <errorMessage>QC Check must be complete before updating Order to Activated status.</errorMessage>
</ValidationRule>