force-app/main/default/objects/Order/validationRules/All_Cancel_Reason_Req_For_Cancel_Order.validationRule-meta.xml
<ValidationRule>
    <fullName>All_Cancel_Reason_Req_For_Cancel_Order</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Order_Cancellation_Reason__c,&apos;&apos;),
ISPICKVAL(Status,&apos;Cancelled&apos;)
)</errorConditionFormula>
    <errorMessage>&apos;Order Cancel Reason&apos; is required for cancelling an Order.</errorMessage>
</ValidationRule>