force-app/main/default/objects/Order/validationRules/All_Cannot_Activate_an_Order.validationRule-meta.xml
<ValidationRule>
    <fullName>All_Cannot_Activate_an_Order</fullName>
    <active>false</active>
    <description>Validation rule to prevent order activation</description>
    <errorConditionFormula>AND(
NOT($Profile.Name = &quot;System Administrator&quot;),
NOT($User.Alias = &quot;autoproc&quot;),
$Permission.All_Cannot_Activate_Orders,
(ISCHANGED( Status )),
 OR(ISPICKVAL(Status, &quot;Activated&quot;),
    ISPICKVAL(Status, &quot;Shipping Hold&quot;))
)</errorConditionFormula>
    <errorMessage>You Cannot Perform this Action. - Test</errorMessage>
</ValidationRule>