force-app/main/default/objects/Order/validationRules/All_Cannot_Activate_an_Order_SFDC.validationRule-meta.xml
<ValidationRule>
    <fullName>All_Cannot_Activate_an_Order_SFDC</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
NOT($Profile.Name = &quot;System Administrator&quot;),
NOT($User.Alias = &quot;autoproc&quot;),
(ISCHANGED( Status )),
 OR(ISPICKVAL(Status, &quot;Activated&quot;),
    ISPICKVAL(Status, &quot;Shipping Hold&quot;))
)</errorConditionFormula>
    <errorMessage>You Cannot Perform this Action.</errorMessage>
</ValidationRule>