force-app/main/default/objects/Order/validationRules/All_Cannot_Reopen_Canceled_Orders.validationRule-meta.xml
<ValidationRule>
    <fullName>All_Cannot_Reopen_Canceled_Orders</fullName>
    <active>true</active>
    <description>Once the order is cancelled it cannot be reopened.</description>
    <errorConditionFormula>AND(   
        
	NOT($Profile.Name = &quot;System Administrator&quot;),
	ISCHANGED(Status),
	ISPICKVAL(PRIORVALUE(Status),&quot;Canceled&quot;)
)</errorConditionFormula>
    <errorMessage>Order status cannot be changed.</errorMessage>
</ValidationRule>