force-app/main/default/objects/Order/validationRules/All_Cannot_set_Previous_Invoice_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>All_Cannot_set_Previous_Invoice_Status</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

NOT($Profile.Name = &quot;System Administrator&quot;)
,OR(
 AND( ISCHANGED( Invoice_Status__c ),AND(ISPICKVAL(Invoice_Status__c, &quot;Invoice Open&quot;),OR(ISPICKVAL(PRIORVALUE(Invoice_Status__c),&quot;Invoice Requested&quot;),ISPICKVAL(PRIORVALUE(Invoice_Status__c),&quot;Invoice Created&quot;),ISPICKVAL(PRIORVALUE(Invoice_Status__c),&quot;Invoice Closed&quot;)))),

AND( ISCHANGED( Invoice_Status__c ),AND(ISPICKVAL(Invoice_Status__c, &quot;Invoice Requested&quot;),OR(ISPICKVAL(PRIORVALUE(Invoice_Status__c),&quot;Invoice Created&quot;),ISPICKVAL(PRIORVALUE(Invoice_Status__c),&quot;Invoice Closed&quot;)))),

AND( ISCHANGED( Invoice_Status__c ),AND(ISPICKVAL(Invoice_Status__c, &quot;Invoice Created&quot;),ISPICKVAL(PRIORVALUE(Invoice_Status__c),&quot;Invoice Closed&quot;)))



))</errorConditionFormula>
    <errorMessage>You cannot Move back to a previous status in Invoice Flow.</errorMessage>
</ValidationRule>